--- a/index.css
+++ b/index.css
@@ -467,9 +467,13 @@ header {
 }
 
 
+/* Individual portfolio item styles */
 
-
-
+.portfolio-item-individual {
+    padding: 0 2em 2em;
+    max-width: 1000px;
+    margin: 0 auto;
+}
 
 
 
