--- a/index.css
+++ b/index.css
@@ -475,7 +475,10 @@ header {
     margin: 0 auto;
 }
 
-
-
+.portfolio-item-individual p {
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
